fixing contrast errors

--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -28,7 +28,7 @@ iframe:hover{
 }
 .page-edit-area{
     width: 90vw;
-    background-color: #778ca9;
+    background-color: #546782;
     margin: 0 auto;
     height: 100%;
     padding: 30px;
@@ -49,7 +49,7 @@ iframe:hover{
 }
 
  h2, li, h3, h4, a, p{
-    color: #093756;
+    color: #070247;
 }
 img{
     width: 90%;
@@ -61,17 +61,30 @@ img{
     display: flex;
     justify-content: center;
 }
+a{
+    font-size: 24px;
+}
 h1{
     color: #b4cae5;
     text-align: center;
 }
+h2{
+    font-size: 28px;
+}
+h3{
+    font-size: 26px;
+}
+h4{
+    font-size: 25px;
+}
+
 p{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 24px;
 }
 li{
     font-weight: 600;
-    font-size: 16px;
+    font-size: 24px;
 }
 
 .fix-position{
@@ -81,10 +94,10 @@ li{
 }
 
 .animated-link{
-    color: #285893;
+    color: #01104d;
     text-decoration: none;
     position: relative;
-    box-shadow: inset 0 -2px 0 0 #285893;
+    box-shadow: inset 0 -2px 0 0 #01104d;
 
 }
 .animated-link:hover{
